wisecow/k8s-manifest/wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80  # Expose on port 80
      targetPort: 4499  # Internally route to port 4499 in the container
  type: LoadBalancer  # Use LoadBalancer for external access
